Fixed spacing issue with performer and running time on search-results and browse-results views

--- a/css/views-styles.css
+++ b/css/views-styles.css
@@ -1,4 +1,4 @@
-G/** NNELS_CALS_v001A **/
+/** NNELS_CALS_v001A **/
 
 /* 01/10/2014 */
 
@@ -1378,13 +1378,9 @@ span.daisy-icon-login {
 .browse-results .view-field-collection-view-repo-files .views-field-field-running-time,
 .search-results .views-field-view.solr-embed-file-field-collection .views-field-field-performer,
 .search-results .views-field-view.solr-embed-file-field-collection .views-field-field-running-time {
-	margin-left: 2.5rem;
-}
-.browse-results .view-field-collection-view-repo-files .views-field-field-performer,
-.browse-results .view-field-collection-view-repo-files .views-field-field-running-time,
-.search-results .views-field-view.solr-embed-file-field-collection .views-field-field-performer,
-.search-results .views-field-view.solr-embed-file-field-collection .views-field-field-running-time {
+  margin-left: 2.5rem;
 	margin-top: -0.2rem;
+  padding: 5px;
 }
 .browse-results .view-field-collection-view-repo-files .views-field-field-running-time + .browse-results .views-field-view.solr-embed-file-field-collection .views-field-field-performer,
 .search-results .views-field-view.solr-embed-file-field-collection .views-field-field-running-time + .search-results .views-field-view.solr-embed-file-field-collection .views-field-field-performer {
